scipy.cluster.hierarchy.linkage practice

--- a/Python_Scikit-learn_NBA_unsupervised.ipynb
+++ b/Python_Scikit-learn_NBA_unsupervised.ipynb
@@ -79,12 +79,14 @@
     "\n",
     "<h5>Reference:</h5>\n",
     "<p><a href='https://stackoverflow.com/questions/32946241/scipy-pdist-on-a-pandas-dataframe'>scipy pdist() on a pandas DataFrame</a></p>\n",
-    "<p><a href='https://joernhees.de/blog/2015/08/26/scipy-hierarchical-clustering-and-dendrogram-tutorial/'>Scipy Hierarchical Clustering and Dendrogram Tutorial</a></p>"
+    "<p><a href='https://joernhees.de/blog/2015/08/26/scipy-hierarchical-clustering-and-dendrogram-tutorial/'>Scipy Hierarchical Clustering and Dendrogram Tutorial</a></p>\n",
+    "<p><a href='https://stackoverflow.com/questions/37712465/what-is-the-meaning-of-the-return-values-of-the-scipy-cluster-hierarchy-linkage'>What is the meaning of the return values of the scipy.cluster.hierarchy.linkage?</a></p>\n",
+    "<p><a href='https://stackoverflow.com/questions/36847022/what-numbers-that-i-can-put-in-numpy-random-seed'>What numbers that I can put in numpy.random.seed()?</a></p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -423,34 +425,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0 2 0 0 2 0 2 0 2 0 0 2 2 0 2 0 2 0 1 2 2 2 2 0 1 0 0 1 0 2 0 0 0 0 2 2\n",
-      " 0 0 0 0 2 1 0 0 0 2 0 1 0 0 2 2 2 0 0 0 0 1 0 0 2 0 1 2 0 0 2 1 0 2 0 0 0\n",
-      " 0 0 1 0 2 2 0 0 2 2 0 2 0 0 0 1 0 0 1 2 2 0 0 2 0 2 0 2 0 0 0 1 0 0 1 1 2\n",
-      " 0 0 0 1 0 2 2 0 2 0 1 0 2 0 0 2 2 2 0 0 0 0 1 1 2 1 2 2 2 2 0 2 2 1 2 2 2\n",
-      " 2 2 0 2 2 0 0 2 0 0 0 2 1 0 1 1 2 2 0 2 1 0 0 0 2 2 0 0 1 2 2 0 2 2 2 2 0\n",
-      " 1 2 2 0 0 2 2 2 2 1 2 0 0 0 2 0 0 0 0 0 0 0 0 0 2 1 0 0 2 2 0 2 1 2 2 2 2\n",
-      " 2 0 0 0 1 0 2 0 0 1 0 2 0 2 0 0 2 2 0 0 0 0 0 0 0 2 1 0 2 0 2 0 2 2 2 0 1\n",
-      " 1 0 2 2 1 2 2 2 1 1 0 0 2 1 2 0 0 1 0 2 1 2 0 0 1 1 0 0 0 0 2 0 0 1 0 2 0\n",
-      " 2 0 0 2 0 2 0 0 0 2 1 0 2 2 0 2 2 0 0 2 2 2 0 2 2 2 2 2 0 0 0 2 2 0 2 1 0\n",
-      " 0 0 0 0 0 0 0 2 2 2 2 2 2 0 2 1 0 0 2 1 2 1 0 2 0 0 0 0 2 2 0 0 0 2 0 2 2\n",
-      " 2 1 1 0 0 0 0 0 0 2 0 0 0 0 0 2 0 2 0 0 2 1 2 2 2 2 0 0 2 0 0 1 1 1 2 0 0\n",
-      " 0 0 2 0 2 2 2 0 0 0 2 0 2 2 2 2 0 0 1 0 0 2 2 2 2 2 0 2 2 0 2 2 0 0 0 2 2\n",
-      " 0 2 0 2 0 0 2 2 2 0 2 2 0 0 2 0 0 2 0 2 0 0 2 2 0 0 2 2 0 2 0 0 2 2 2 0 2\n",
-      " 2 2 2 2 2]\n",
-      "[0 0 2 0 0 2 0 2 0 2 0 0 2 2 0 2 0 2 0 1 2 2 2 2 0 1 0 0 1 0 2 0 0 0 0 2 2\n",
-      " 0 0 0 0 2 1 0 0 0 2 0 1 0 0 2 2 2 0 0 0 0 1 0 0 2 0 1 2 0 0 2 1 0 2 0 0 0\n",
-      " 0 0 1 0 2 2 0 0 2 2 0 2 0 0 0 1 0 0 1 2 2 0 0 2 0 2 0 2 0 0 0 1 0 0 1 1 2\n",
-      " 0 0 0 1 0 2 2 0 2 0 1 0 2 0 0 2 2 2 0 0 0 0 1 1 2 1 2 2 2 2 0 2 2 1 2 2 2\n",
-      " 2 2 0 2 2 0 0 2 0 0 0 2 1 0 1 1 2 2 0 2 1 0 0 0 2 2 0 0 1 2 2 0 2 2 2 2 0\n",
-      " 1 2 2 0 0 2 2 2 2 1 2 0 0 0 2 0 0 0 0 0 0 0 0 0 2 1 0 0 2 2 0 2 1 2 2 2 2\n",
-      " 2 0 0 0 1 0 2 0 0 1 0 2 0 2 0 0 2 2 0 0 0 0 0 0 0 2 1 0 2 0 2 0 2 2 2 0 1\n",
-      " 1 0 2 2 1 2 2 2 1 1 0 0 2 1 2 0 0 1 0 2 1 2 0 0 1 1 0 0 0 0 2 0 0 1 0 2 0\n",
-      " 2 0 0 2 0 2 0 0 0 2 1 0 2 2 0 2 2 0 0 2 2 2 0 2 2 2 2 2 0 0 0 2 2 0 2 1 0\n",
-      " 0 0 0 0 0 0 0 2 2 2 2 2 2 0 2 1 0 0 2 1 2 1 0 2 0 0 0 0 2 2 0 0 0 2 0 2 2\n",
-      " 2 1 1 0 0 0 0 0 0 2 0 0 0 0 0 2 0 2 0 0 2 1 2 2 2 2 0 0 2 0 0 1 1 1 2 0 0\n",
-      " 0 0 2 0 2 2 2 0 0 0 2 0 2 2 2 2 0 0 1 0 0 2 2 2 2 2 0 2 2 0 2 2 0 0 0 2 2\n",
-      " 0 2 0 2 0 0 2 2 2 0 2 2 0 0 2 0 0 2 0 2 0 0 2 2 0 0 2 2 0 2 0 0 2 2 2 0 2\n",
-      " 2 2 2 2 2]\n"
+      "[0 0 1 0 0 1 0 1 0 1 0 0 1 1 0 1 0 1 0 2 1 1 1 1 0 2 0 0 2 0 1 0 0 0 0 1 1\n",
+      " 0 0 0 0 1 2 0 0 0 1 0 2 0 0 1 1 1 0 0 0 0 2 0 0 1 0 2 1 0 0 1 2 0 1 0 0 0\n",
+      " 0 0 2 0 1 1 0 0 1 1 0 1 0 0 0 2 0 0 2 1 1 0 0 1 0 1 0 1 0 0 0 2 0 0 2 2 1\n",
+      " 0 0 0 2 0 1 1 0 1 0 2 0 1 0 0 1 1 1 0 0 0 0 2 2 1 2 1 0 0 1 0 1 1 2 1 1 1\n",
+      " 1 1 0 1 1 0 0 1 0 0 0 1 2 0 2 2 1 1 0 1 2 0 0 0 1 1 0 0 2 1 1 0 1 1 1 1 0\n",
+      " 2 1 1 0 0 1 1 1 1 2 1 0 0 0 1 0 0 0 0 0 0 0 0 0 1 2 0 0 1 1 0 1 2 1 1 1 1\n",
+      " 1 0 0 0 2 0 1 0 0 2 0 1 0 1 0 0 1 1 0 0 0 0 0 0 0 1 2 0 1 0 1 0 1 1 1 0 2\n",
+      " 2 0 1 1 2 1 1 1 2 2 0 0 1 2 1 0 0 2 0 1 2 1 0 0 2 2 0 0 0 0 1 0 0 2 0 1 0\n",
+      " 1 0 0 1 0 1 0 0 0 1 2 0 1 1 0 1 1 0 0 1 1 1 0 1 1 1 1 1 0 0 0 1 1 0 1 2 0\n",
+      " 0 0 0 0 0 0 0 1 1 2 1 1 1 0 1 2 0 0 1 2 1 2 0 1 0 0 0 0 1 1 0 0 0 1 0 1 1\n",
+      " 1 2 2 0 0 0 0 0 0 1 0 0 0 0 0 1 0 1 0 0 1 2 1 1 1 1 0 0 1 0 0 2 2 2 1 0 0\n",
+      " 0 0 1 0 1 1 1 0 0 0 1 0 1 1 1 1 0 0 2 0 0 1 1 1 1 1 0 1 1 0 1 1 0 0 0 1 1\n",
+      " 0 1 0 1 0 0 1 1 1 0 1 1 0 0 1 0 0 1 0 1 0 0 1 1 0 0 1 1 0 1 0 0 1 1 1 0 1\n",
+      " 1 1 1 1 1]\n",
+      "[0 0 1 0 0 1 0 1 0 1 0 0 1 1 0 1 0 1 0 2 1 1 1 1 0 2 0 0 2 0 1 0 0 0 0 1 1\n",
+      " 0 0 0 0 1 2 0 0 0 1 0 2 0 0 1 1 1 0 0 0 0 2 0 0 1 0 2 1 0 0 1 2 0 1 0 0 0\n",
+      " 0 0 2 0 1 1 0 0 1 1 0 1 0 0 0 2 0 0 2 1 1 0 0 1 0 1 0 1 0 0 0 2 0 0 2 2 1\n",
+      " 0 0 0 2 0 1 1 0 1 0 2 0 1 0 0 1 1 1 0 0 0 0 2 2 1 2 1 0 0 1 0 1 1 2 1 1 1\n",
+      " 1 1 0 1 1 0 0 1 0 0 0 1 2 0 2 2 1 1 0 1 2 0 0 0 1 1 0 0 2 1 1 0 1 1 1 1 0\n",
+      " 2 1 1 0 0 1 1 1 1 2 1 0 0 0 1 0 0 0 0 0 0 0 0 0 1 2 0 0 1 1 0 1 2 1 1 1 1\n",
+      " 1 0 0 0 2 0 1 0 0 2 0 1 0 1 0 0 1 1 0 0 0 0 0 0 0 1 2 0 1 0 1 0 1 1 1 0 2\n",
+      " 2 0 1 1 2 1 1 1 2 2 0 0 1 2 1 0 0 2 0 1 2 1 0 0 2 2 0 0 0 0 1 0 0 2 0 1 0\n",
+      " 1 0 0 1 0 1 0 0 0 1 2 0 1 1 0 1 1 0 0 1 1 1 0 1 1 1 1 1 0 0 0 1 1 0 1 2 0\n",
+      " 0 0 0 0 0 0 0 1 1 2 1 1 1 0 1 2 0 0 1 2 1 2 0 1 0 0 0 0 1 1 0 0 0 1 0 1 1\n",
+      " 1 2 2 0 0 0 0 0 0 1 0 0 0 0 0 1 0 1 0 0 1 2 1 1 1 1 0 0 1 0 0 2 2 2 1 0 0\n",
+      " 0 0 1 0 1 1 1 0 0 0 1 0 1 1 1 1 0 0 2 0 0 1 1 1 1 1 0 1 1 0 1 1 0 0 0 1 1\n",
+      " 0 1 0 1 0 0 1 1 1 0 1 1 0 0 1 0 0 1 0 1 0 0 1 1 0 0 1 1 0 1 0 0 1 1 1 0 1\n",
+      " 1 1 1 1 1]\n"
      ]
     }
    ],
@@ -467,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -2242,7 +2244,7 @@
        "[486 rows x 486 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2254,6 +2256,28 @@
     "\n",
     "row_dist = pd.DataFrame(squareform(pdist(new_df, metric='euclidean')))\n",
     "row_dist\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ -0.82737475 -23.18235809]\n",
+      " [ -1.03879472  -1.42685925]\n",
+      " [ -0.6182129    5.35646919]\n",
+      " [  0.6003344    1.11075041]\n",
+      " [ -0.5590925   16.06892693]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.multivariate_normal([0, 0], [[1,0],[0,100]], 5)\n",
+    "print(a)"
    ]
   },
   {
