--- a/Python_Scikit-learn_NBA_unsupervised.ipynb
+++ b/Python_Scikit-learn_NBA_unsupervised.ipynb
@@ -79,9 +79,24 @@
     "\n",
     "<h5>Reference:</h5>\n",
     "<p><a href='https://stackoverflow.com/questions/32946241/scipy-pdist-on-a-pandas-dataframe'>scipy pdist() on a pandas DataFrame</a></p>\n",
+    "<p><a href='https://stackoverflow.com/questions/36847022/what-numbers-that-i-can-put-in-numpy-random-seed'>What numbers that I can put in numpy.random.seed()?</a></p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h4 style='color: red'>scipy.cluster.hierarchy</h4>\n",
+    "<p><em style='color: blue'>Hierarchical clustering:</em> It's a method of cluster analysis which splits(Divisive) or merges(Agglomerative) data layer by layer, and finally it will create a dendrogram based on the clustering result.</p>\n",
+    "<p style='color: blue'>scipy.cluster.hierarchy.<b>linkage</b>(y, method='single', metric='euclidean')</p>\n",
+    "\n",
+    "<p style='color: blue'>scipy.cluster.hierarchy.<b>cophenet</b>(Z, Y=None)</p>\n",
+    "\n",
+    "<h5>Reference:</h5>\n",
     "<p><a href='https://joernhees.de/blog/2015/08/26/scipy-hierarchical-clustering-and-dendrogram-tutorial/'>Scipy Hierarchical Clustering and Dendrogram Tutorial</a></p>\n",
     "<p><a href='https://stackoverflow.com/questions/37712465/what-is-the-meaning-of-the-return-values-of-the-scipy-cluster-hierarchy-linkage'>What is the meaning of the return values of the scipy.cluster.hierarchy.linkage?</a></p>\n",
-    "<p><a href='https://stackoverflow.com/questions/36847022/what-numbers-that-i-can-put-in-numpy-random-seed'>What numbers that I can put in numpy.random.seed()?</a></p>"
+    "<p><a href='http://radio.feld.cvut.cz/matlab/toolbox/stats/cophenet.html'>Statistic Toolbox - cophenet</a></p>\n",
+    "<p><a href='https://stats.stackexchange.com/questions/82326/how-to-interpret-the-dendrogram-of-a-hierarchical-cluster-analysis'>How to interpret the dendrogram of a hierarchical cluster analysis?</a></p>\n"
    ]
   },
   {
